2005-10-09 Scott Dattalo <scott@dattalo.com>
	* src/pic-instructions.cc, src/pic-instructions.h: Added methods
	to the instruction class that provide acces to the source defining
	an instruction (this is going to be used with tracing and
	disassembly soon).

2005-10-11 Borut Razem <borut.razem@siol.net>
	* regression/usart_test/usart_test.asm, regression/logic_test/logic_test.asm,
	  modules/makefile.mingw, gui/gui_breadbord.cc, plat/win32/gpsim.nsi:
	  gpsim_modules.dll renamed to libgpsim_modules.dll

2005-10-09 Scott Dattalo <scott@dattalo.com>
	* regression/tmr0_16bit/tmr0_16bit.asm: More tmr0 regressions
	testing
	* src/cod.cc, src/breakpoints.h, src/breakpoints.cc: Added the
	CommandAssertion class. These are assertions that are associated
	with instructions in such a way that when an instruction executes,
	the command assertion will issue a gpsim command line command.
	* gpsim/main.cc: removed a debug printf.
	* cli/input.cc, cmd_macro.cc, cli/ui_gpsim.cc: command assertions
	were getting inserted into the end of the command line input
	stream as opposed to interjected immediately.

2005-10-10 Scott Dattalo <scott@dattalo.com>
	* gpsim/main.cc, cli/cmd_load.cc, cli/cmd_symbol.cc,
	src/symbol.cc, src/symbol.h: Simplified the way user defined
	symbols are added to the symbol table.

2005-10-09 Borut Razem <borut.razem@siol.net>
	* plat/win32/fd2raw.cpp, cli/input.cc: win32_set_is_readable() not
	  needed for glib >= 2.6
	* src/sim_context.cc, src/i2c_ee.cc: fixed the p12ce518 regression
	  test problem
	* cli/socket.cc: g_io_channel_set_flags() not implemented on WIN32;
	  call it only on non-WIN32 platforms or if _DEBUG

2005-10-08 Scott Dattalo <scott@dattalo.com>
	* src/tmr0.cc, regression/tmr0_16bit/tmr0_16bit.asm: tmr0
	clear_break was getting called recursively. The tmr0 regression
	test now checks psa combinations.

2005-10-08 Robert Pearce <rob@bdt-home.demon.co.uk>
	* src/p12x.cc, src/p16x5x.cc, src/p16x5x.h, src/stimuli.cc,